--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@types/node-cron": "^3.0.6",
+    "dotenv": "^16.0.3",
     "grammy": "^1.12.1",
     "node-cron": "^3.0.2",
     "prompt-sync": "^4.2.0",
