--- a/package.json
+++ b/package.json
@@ -4,21 +4,26 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "start": "nodemon src/index.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^18.11.17",
-    "@types/prompt-sync": "^4.2.0"
+    "@types/node": "^18.11.18",
+    "@types/prompt-sync": "^4.2.0",
+    "prisma": "^4.8.0",
+    "typescript": "^4.9.4"
   },
   "dependencies": {
+    "@prisma/client": "^4.8.0",
     "@types/node-cron": "^3.0.6",
     "dotenv": "^16.0.3",
     "grammy": "^1.12.1",
     "node-cron": "^3.0.2",
+    "nodemon": "^2.0.20",
     "prompt-sync": "^4.2.0",
-    "typescript": "^4.9.4"
+    "ts-node": "^10.9.1"
   }
 }
